<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2010 ZXing authors
 Copyright 2011 Robert Theis

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
<resources>
  <string name="app_name">Scan Speak Droid</string>
    <string name="title">ScanSpeakDroid</string>
    <color name="LTBLUE">#127597</color>
    <color name="BKWHITE">#FFFFFF</color>
    <string name="tap">Tap to Continue . . .</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="speak">Speak It . . .</string>
    <string name="msg">Message it</string>
    <string name="email">E - Mail</string>
      <string name="done">Done</string>
    </resources>
