<?xml version="1.0" encoding="utf-8"?>

<TableLayout android:id="@+id/TableLayout1" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@color/BKWHITE">
<TextView android:textStyle="bold" android:id="@+id/lb1" android:layout_height="wrap_content" android:soundEffectsEnabled="true" android:text="@string/title" android:textColor="@color/LTBLUE" android:layout_width="fill_parent"></TextView>
<ImageView android:layout_height="wrap_content" android:id="@+id/imageView1" android:src="@drawable/icon2" android:layout_width="wrap_content"></ImageView>
<ImageView android:layout_height="wrap_content" android:id="@+id/imageView2" android:src="@drawable/bkwhite" android:layout_width="wrap_content"></ImageView>
<LinearLayout android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/linearLayout1" android:layout_width="fill_parent">
    <ImageButton android:layout_width="wrap_content" android:id="@+id/imageButton2" android:src="@drawable/camera1" android:tag="Capture" android:layout_height="wrap_content"></ImageButton>
    <ImageButton android:layout_width="wrap_content" android:id="@+id/imageButton1" android:src="@drawable/folder" android:layout_gravity="right" android:layout_height="wrap_content"></ImageButton>
    <Button android:layout_height="wrap_content" android:text="@string/ok" android:id="@+id/button1" android:layout_width="wrap_content"></Button>
    <Button android:layout_height="wrap_content" android:id="@+id/button2" android:layout_width="wrap_content" android:text="@string/cancel"></Button>
    
</LinearLayout>

</TableLayout>
